--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,3 +1,35 @@
+2000-01-19  Geoff Keating  <geoffk@cygnus.com>
+
+	* rs6000.md (floatsidf2): Don't use the fpmem "register", just
+	allocate a stack temporary.
+	(floatsidf2_internal): Likewise.
+	(floatsidf2_internal+1): Likewise.  Don't do bizzare hacks
+	with unspec.
+	(floatunssidf2): Don't use the fpmem "register", just
+	allocate a stack temporary.
+	(floatunssidf2_internal): Likewise.
+	(floatunssidf2_internal+1): Likewise.  Don't do bizzare hacks
+	with unspec.
+	(floatsidf2_loadaddr): Delete.
+	(floatsidf2_store1): Delete.
+	(floatsidf2_store2): Delete.
+	(floatsidf2_load): Delete.
+	(fix_truncdfsi2): Don't use the fpmem "register", just
+	allocate a stack temporary.
+	(fix_truncdfsi2_internal_si): Delete.
+	(fix_truncdfsi2_internal_di): Delete.
+	(fix_truncdfsi2_internal): New insn.
+	(fix_truncdfsi2_internal+1): Don't use the fpmem "register".
+	(fix_truncdfsi2_store): Delete.
+	(fix_truncdfsi2_load): Delete.
+	(fctiwz): Produce gen_fctiwz.
+
+	* rs6000.md (movsi_got): 'unspec 8' returns a SImode result,
+	at present.
+	(movsi_got_internal): Likewise.
+	(movsi_got_internal+1): Likewise.
+	(set_sp): 'unspec 7' does a SImode clobber.
+
 2000-01-19  Geoffrey Keating  <geoffk@cygnus.com>
 
 	* eabi.h (INVOKE__main): Define.
