* rs6000.md (movsi_got): 'unspec 8' returns a SImode result, at present. (movsi_got_internal): Likewise. (movsi_got_internal+1): Likewise. (set_sp): 'unspec 7' does a SImode clobber.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31528 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -5796,8 +5796,8 @@
 
 (define_expand "movsi_got"
   [(set (match_operand:SI 0 "gpc_reg_operand" "")
-	(unspec [(match_operand:SI 1 "got_operand" "")
-		 (match_dup 2)] 8))]
+	(unspec:SI [(match_operand:SI 1 "got_operand" "")
+		    (match_dup 2)] 8))]
   "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1"
   "
 {
@@ -5822,8 +5822,8 @@
 
 (define_insn "*movsi_got_internal"
   [(set (match_operand:SI 0 "gpc_reg_operand" "=r")
-	(unspec [(match_operand:SI 1 "got_no_const_operand" "")
-		 (match_operand:SI 2 "gpc_reg_operand" "b")] 8))]
+	(unspec:SI [(match_operand:SI 1 "got_no_const_operand" "")
+		    (match_operand:SI 2 "gpc_reg_operand" "b")] 8))]
   "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1"
   "{l|lwz} %0,%a1@got(%2)"
   [(set_attr "type" "load")])
@@ -5832,13 +5832,13 @@
 ;; didn't get allocated to a hard register.
 (define_split 
   [(set (match_operand:SI 0 "gpc_reg_operand" "=r")
-	(unspec [(match_operand:SI 1 "got_no_const_operand" "")
-		 (match_operand:SI 2 "memory_operand" "m")] 8))]
+	(unspec:SI [(match_operand:SI 1 "got_no_const_operand" "")
+		    (match_operand:SI 2 "memory_operand" "m")] 8))]
   "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS)
     && flag_pic == 1
     && (reload_in_progress || reload_completed)"
   [(set (match_dup 0) (match_dup 2))
-   (set (match_dup 0) (unspec [(match_dup 1)(match_dup 0)] 8))]
+   (set (match_dup 0) (unspec:SI [(match_dup 1)(match_dup 0)] 8))]
   "")
 
 ;; For SI, we special-case integers that can't be loaded in one insn.  We
@@ -7819,7 +7819,7 @@
 
 (define_insn "set_sp"
   [(set (reg:SI 1)
-	(unspec [(match_operand:SI 0 "register_operand" "r")] 7))]
+	(unspec:SI [(match_operand:SI 0 "register_operand" "r")] 7))]
   ""
   ""
   [(set_attr "length" "0")])
@@ -7899,7 +7899,7 @@
 
 (define_insn "init_v4_pic"
   [(set (match_operand:SI 0 "register_operand" "=l")
-	(unspec [(const_int 0)] 7))]
+	(unspec:SI [(const_int 0)] 7))]
   "DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS"
   "bl _GLOBAL_OFFSET_TABLE_@local-4"
   [(set_attr "type" "branch")
