* rs6000.md (movsi): Don't use force_reg when no_new_pseudos. (movdi): Likewise. (movhi): Likewise. (movqi): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31531 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,5 +1,12 @@
 2000-01-19  Geoff Keating  <geoffk@cygnus.com>
 
+	* rs6000.md (movsi): Don't use force_reg when no_new_pseudos.
+	(movdi): Likewise.
+	(movhi): Likewise.
+	(movqi): Likewise.
+
+2000-01-19  Geoff Keating  <geoffk@cygnus.com>
+
 	* rs6000.md (movsi_got): 'unspec 8' returns a SImode result,
 	at present.
 	(movsi_got_internal): Likewise.
