--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -5851,7 +5851,7 @@
   ""
   "
 {
-  if (GET_CODE (operands[0]) != REG)
+  if (! no_new_pseudos && GET_CODE (operands[0]) != REG)
     operands[1] = force_reg (SImode, operands[1]);
 
   /* Convert a move of a CONST_DOUBLE into a CONST_INT */
@@ -6033,7 +6033,7 @@
   ""
   "
 {
-  if (GET_CODE (operands[0]) != REG)
+  if (! no_new_pseudos && GET_CODE (operands[0]) != REG)
     operands[1] = force_reg (HImode, operands[1]);
 
   if (CONSTANT_P (operands[1])
@@ -6069,7 +6069,7 @@
   ""
   "
 {
-  if (GET_CODE (operands[0]) != REG)
+  if (! no_new_pseudos && GET_CODE (operands[0]) != REG)
     operands[1] = force_reg (QImode, operands[1]);
 
   if (CONSTANT_P (operands[1])
@@ -6513,7 +6513,7 @@
   ""
   "
 {
-  if (GET_CODE (operands[0]) != REG)
+  if (! no_new_pseudos && GET_CODE (operands[0]) != REG)
     operands[1] = force_reg (DImode, operands[1]);
 
   /* Convert a move of a CONST_DOUBLE into a CONST_INT
