--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -26,9 +26,11 @@
 ;; 0		frsp for POWER machines
 ;; 0/v		blockage
 ;; 1/v		nonlocal_goto_receiver for MINIMAL_TOC
+;; 6		address of a word pointing to the TOC
 ;; 7		clobber SP for NT
-;; 7		address of the GOT under SVR4 -fpic
+;; 7		address of the TOC (more-or-less)
 ;; 8		movsi_got
+;; 19		movesi_from_cr
 ;; 20		movesi_to_cr
 
 ;; Define an insn type attribute.  This is used in function unit delay
@@ -1002,6 +1004,9 @@
       if (low & 0x8000)
         high += 0x10000, low |= ((HOST_WIDE_INT) -1) << 16;
 
+      /* The ordering here is important for the prolog expander.
+	 When space is allocated from the stack, adding 'low' first may
+	 produce a temporary deallocation (which would be bad).  */
       emit_insn (gen_addsi3 (tmp, operands[1], GEN_INT (high)));
       emit_insn (gen_addsi3 (operands[0], tmp, GEN_INT (low)));
       DONE;
@@ -5776,21 +5781,23 @@
 ;; Now define ways of moving data around.
 
 ;; Elf specific ways of loading addresses for non-PIC code.
-;; The output of this could be r0, but we limit it to base
-;; registers, since almost all uses of this will need it
-;; in a base register shortly.
+;; The output of this could be r0, but we make a very strong
+;; preference for a base register because it will usually
+;; be needed there.
 (define_insn "elf_high"
-  [(set (match_operand:SI 0 "gpc_reg_operand" "=b")
+  [(set (match_operand:SI 0 "gpc_reg_operand" "=b*r")
 	(high:SI (match_operand 1 "" "")))]
   "TARGET_ELF && ! TARGET_64BIT"
   "{liu|lis} %0,%1@ha")
 
 (define_insn "elf_low"
-  [(set (match_operand:SI 0 "gpc_reg_operand" "=r")
-	(lo_sum:SI (match_operand:SI 1 "gpc_reg_operand" "b")
+  [(set (match_operand:SI 0 "gpc_reg_operand" "=r,r")
+	(lo_sum:SI (match_operand:SI 1 "gpc_reg_operand" "b,!*r")
 		   (match_operand 2 "" "")))]
    "TARGET_ELF && ! TARGET_64BIT"
-   "{cal|la} %0,%2@l(%1)")
+   "@
+    {cal|la} %0,%2@l(%1)
+    {ai|addic} %0,%1,%l2")
 
 ;; Set up a register with a value from the GOT table
 
@@ -7895,15 +7902,80 @@
 
 ;; TOC register handling.
 
-;; Code to initialize the PIC register for SVR4 -fpic.
+;; Code to initialize the TOC register...
 
-(define_insn "init_v4_pic"
+(define_insn "load_toc_aix_si"
+  [(set (match_operand:SI 0 "register_operand" "=r")
+	(unspec:SI [(const_int 0)] 7))]
+  "! TARGET_ELF && TARGET_32BIT"
+  "*
+{
+  char buf[30];
+  ASM_GENERATE_INTERNAL_LABEL (buf, \"LCTOC\", 0);
+  operands[1] = gen_rtx_SYMBOL_REF (Pmode, ggc_alloc_string (buf, -1));
+  operands[2] = gen_rtx_REG (Pmode, 2);
+  return \"{l|lwz} %0,%1(%2)\";
+}"
+  [(set_attr "type" "load")])
+
+(define_insn "load_toc_aix_di"
+  [(set (match_operand:DI 0 "register_operand" "=r")
+	(unspec:DI [(const_int 0)] 7))]
+  "! TARGET_ELF && TARGET_64BIT"
+  "*
+{
+  char buf[30];
+  ASM_GENERATE_INTERNAL_LABEL (buf, \"LCTOC\", 0);
+  operands[1] = gen_rtx_SYMBOL_REF (Pmode, ggc_alloc_string (buf, -1));
+  operands[2] = gen_rtx_REG (Pmode, 2);
+  return \"ld %0,%1(%2)\";
+}"
+  [(set_attr "type" "load")])
+
+(define_insn "load_toc_v4_pic_si"
   [(set (match_operand:SI 0 "register_operand" "=l")
 	(unspec:SI [(const_int 0)] 7))]
-  "DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS"
+  "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1
+   && TARGET_32BIT"
   "bl _GLOBAL_OFFSET_TABLE_@local-4"
   [(set_attr "type" "branch")
    (set_attr "length" "4")])
+
+(define_insn "load_toc_v4_pic_di"
+  [(set (match_operand:DI 0 "register_operand" "=l")
+	(unspec:DI [(const_int 0)] 7))]
+  "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1
+   && TARGET_64BIT"
+  "bl _GLOBAL_OFFSET_TABLE_@local-4"
+  [(set_attr "type" "branch")
+   (set_attr "length" "4")])
+
+(define_insn "load_toc_v4_PIC_1"
+  [(set (match_operand:SI 0 "register_operand" "=l")
+	(match_operand:SI 1 "immediate_operand" "s"))
+   (unspec [(match_dup 1)] 7)]
+  "TARGET_ELF && flag_pic == 2"
+  "bl %1\\n%1:"
+  [(set_attr "type" "branch")
+   (set_attr "length" "4")])
+
+(define_insn "load_toc_v4_PIC_1b"
+  [(set (match_operand:SI 0 "register_operand" "=l")
+	(match_operand:SI 1 "immediate_operand" "s"))
+   (unspec [(match_dup 1) (match_operand 2 "immediate_operand" "s")] 6)]
+  "TARGET_ELF && flag_pic == 2"
+  "bl %1\\n\\t.long %2-%1\\n%1:"
+  [(set_attr "type" "branch")
+   (set_attr "length" "8")])
+
+(define_insn "load_toc_v4_PIC_2"
+  [(set (match_operand:SI 0 "register_operand" "=r")
+	(mem:SI (plus:SI (match_operand:SI 1 "register_operand" "r")
+		   (minus:SI (match_operand:SI 2 "immediate_operand" "s")
+			     (match_operand:SI 3 "immediate_operand" "s")))))]
+  "TARGET_ELF && flag_pic == 2"
+  "{l|lwz} %0,%2-%3(%1)"
+  [(set_attr "type" "load")])
 
 ;; If the TOC is shared over a translation unit, as in SVR4 -fpic
 ;; we need to restore the TOC pointer only when jumping over units
@@ -7914,24 +7986,21 @@
   "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1"
   "
 {
-  rtx temp = gen_reg_rtx (Pmode);
-  emit_insn (gen_init_v4_pic (temp));
-  emit_move_insn (gen_rtx_REG (Pmode, PIC_OFFSET_TABLE_REGNUM), temp);
+  rs6000_emit_load_toc_table (FALSE);
   DONE;
 }")
 
 ;; If the TOC is procedure-specific (as in AIX -mminimal-toc and SVR4 -fPIC),
 ;; we must restore it with every nonlocal goto.
 
-(define_insn "nonlocal_goto_receiver"
-  [(unspec_volatile [(const_int 0)] 1)]
+(define_expand "nonlocal_goto_receiver"
+  [(use (const_int 0))]
   "TARGET_TOC && TARGET_MINIMAL_TOC"
-  "*
+  "
 {
-  rs6000_output_load_toc_table (asm_out_file, 30);
-  return \"\";
-}"
-  [(set_attr "type" "load")])
+  rs6000_emit_load_toc_table (FALSE);
+  DONE;
+}")
 
 ;; A function pointer under AIX is a pointer to a data area whose first word
 ;; contains the actual address of the function, whose second word contains a
@@ -11070,6 +11139,48 @@
   "td%V0%I2 %1,%2")
 
 ;; Insns related to generating the function prologue and epilogue.
+
+(define_expand "prologue"
+  [(use (const_int 0))]
+  "TARGET_SCHED_PROLOG"
+  "
+{
+      rs6000_emit_prologue ();
+      DONE;
+}")
+
+(define_insn "movesi_from_cr"
+  [(set (match_operand:SI 0 "gpc_reg_operand" "=r")
+        (unspec:SI [(reg:CC 68) (reg:CC 69) (reg:CC 70) (reg:CC 71) 
+		    (reg:CC 72)	(reg:CC 73) (reg:CC 74) (reg:CC 75)] 19))]
+  ""
+  "mfcr %0")
+
+(define_insn "*stmw"
+ [(match_parallel 0 "stmw_operation"
+		  [(set (match_operand:SI 1 "memory_operand" "=m")
+       			(match_operand:SI 2 "gpc_reg_operand" "r"))])]
+ "TARGET_MULTIPLE"
+ "stmw %2,%1")
+ 
+(define_insn "*save_fpregs_si"
+ [(match_parallel 0 "any_operand"
+                  [(clobber (match_operand:SI 1 "register_operand" "=l"))
+		   (use (match_operand:SI 2 "call_operand" "s"))
+		   (set (match_operand:DF 3 "memory_operand" "=m")
+			(match_operand:DF 4 "gpc_reg_operand" "f"))])]
+ "TARGET_32BIT"
+ "bl %z2")
+
+(define_insn "*save_fpregs_di"
+ [(match_parallel 0 "any_operand"
+                  [(clobber (match_operand:DI 1 "register_operand" "=l"))
+		   (use (match_operand:DI 2 "call_operand" "s"))
+		   (set (match_operand:DF 3 "memory_operand" "=m")
+			(match_operand:DF 4 "gpc_reg_operand" "f"))])]
+ "TARGET_64BIT"
+ "bl %z2")
+
 
 (define_expand "epilogue"
   [(use (const_int 0))]
