--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,3 +1,7 @@
+2000-01-21  Geoff Keating  <geoffk@cygnus.com>
+
+	* rs6000.md (movsi_to_cr): Correct typo in output template.
+
 2000-01-19  Geoffrey Keating  <geoffk@cygnus.com>
 
 	* rs6000.c (rs6000_pic_labelno): Always define.
