* rs6000.md (fctiwz): Use (set (reg) (unspec:DI [(fix:SI ...)])) rather than (set (subreg:SI (reg)) (fix:SI ...)) so that register allocation knows (reg) is dead before the insn.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@31594 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/newppc-branch/gcc/config/rs6000/rs6000.md
+++ b/newppc-branch/gcc/config/rs6000/rs6000.md
@@ -30,6 +30,7 @@
 ;; 7		clobber SP for NT
 ;; 7		address of the TOC (more-or-less)
 ;; 8		movsi_got
+;; 10		fctiwz
 ;; 19		movesi_from_cr
 ;; 20		movesi_to_cr
 
@@ -4420,9 +4421,13 @@
   rs6000_trunc_used = 1;
 }")
 
+; Here, we use (set (reg) (unspec:DI [(fix:SI ...)] 10))
+; rather than (set (subreg:SI (reg)) (fix:SI ...))
+; because the first makes it clear that operand 0 is not live
+; before the instruction.
 (define_insn "fctiwz"
-  [(set (subreg:SI (match_operand:DI 0 "gpc_reg_operand" "=f") 0)
-	(fix:SI (match_operand:DF 1 "gpc_reg_operand" "f")))]
+  [(set (match_operand:DI 0 "gpc_reg_operand" "=f")
+	(unspec:DI [(fix:SI (match_operand:DF 1 "gpc_reg_operand" "f"))] 10))]
   "(TARGET_POWER2 || TARGET_POWERPC) && TARGET_HARD_FLOAT"
   "{fcirz|fctiwz} %0,%1"
   [(set_attr "type" "fp")])
