--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,3 +1,9 @@
+2000-01-24  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* rs6000.md (fctiwz): Use (set (reg) (unspec:DI [(fix:SI ...)]))
+	rather than (set (subreg:SI (reg)) (fix:SI ...)) so that register
+	allocation knows (reg) is dead before the insn.
+
 2000-01-21  Geoff Keating  <geoffk@cygnus.com>
 
 	* rs6000.md (movsi_to_cr): Correct typo in output template.
